antlr_parser/PopurriParser.py
# Generated from Popurri.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PopurriParser ( Parser ):

    grammarFileName = "Popurri.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'var'", "','", "':'", "'['", 
                     "']'", "'func'", "'('", "')'", "'{'", "'}'", "'class'", 
                     "'->'", "'.'", "'while'", "'for'", "'in'", "'if'", 
                     "'else if'", "'else'", "'return'", "'break'", "'and'", 
                     "'or'", "'<'", "'<='", "'>'", "'>='", "'is'", "'is not'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'='", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'print'", "'println'", 
                     "'input'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "COMMENT", "CONST_BOOL", 
                      "CONST_I", "CONST_F", "CONST_STR", "TYPE", "ACCESS_TYPE", 
                      "ID" ]

    RULE_program = 0
    RULE_module = 1
    RULE_declarations = 2
    RULE_declaration = 3
    RULE_function = 4
    RULE_classDeclaration = 5
    RULE_parent = 6
    RULE_attributes = 7
    RULE_attribute = 8
    RULE_method = 9
    RULE_statement = 10
    RULE_whileLoop = 11
    RULE_forLoop = 12
    RULE_branch = 13
    RULE_ifStmt = 14
    RULE_elseIf = 15
    RULE_elseStmt = 16
    RULE_returnStmt = 17
    RULE_breakStmt = 18
    RULE_cond = 19
    RULE_cmp = 20
    RULE_exp = 21
    RULE_add = 22
    RULE_multModDiv = 23
    RULE_val = 24
    RULE_indexation = 25
    RULE_boolOp = 26
    RULE_cmpOp = 27
    RULE_addOp = 28
    RULE_unaryAddOp = 29
    RULE_multDivOp = 30
    RULE_expOp = 31
    RULE_assignOp = 32
    RULE_assignment = 33
    RULE_funcCall = 34
    RULE_constant = 35
    RULE_const_arr = 36
    RULE_iterable = 37
    RULE_printStmt = 38
    RULE_printlnStmt = 39
    RULE_inputStmt = 40
    RULE_condParam = 41
    RULE_funcParams = 42

    ruleNames =  [ "program", "module", "declarations", "declaration", "function", 
                   "classDeclaration", "parent", "attributes", "attribute", 
                   "method", "statement", "whileLoop", "forLoop", "branch", 
                   "ifStmt", "elseIf", "elseStmt", "returnStmt", "breakStmt", 
                   "cond", "cmp", "exp", "add", "multModDiv", "val", "indexation", 
                   "boolOp", "cmpOp", "addOp", "unaryAddOp", "multDivOp", 
                   "expOp", "assignOp", "assignment", "funcCall", "constant", 
                   "const_arr", "iterable", "printStmt", "printlnStmt", 
                   "inputStmt", "condParam", "funcParams" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    WS=46
    COMMENT=47
    CONST_BOOL=48
    CONST_I=49
    CONST_F=50
    CONST_STR=51
    TYPE=52
    ACCESS_TYPE=53
    ID=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self):
            return self.getTypedRuleContext(PopurriParser.ModuleContext,0)


        def EOF(self):
            return self.getToken(PopurriParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(PopurriParser.ClassDeclarationContext,i)


        def declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.DeclarationsContext)
            else:
                return self.getTypedRuleContext(PopurriParser.DeclarationsContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.FunctionContext)
            else:
                return self.getTypedRuleContext(PopurriParser.FunctionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.StatementContext)
            else:
                return self.getTypedRuleContext(PopurriParser.StatementContext,i)


        def getRuleIndex(self):
            return PopurriParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PopurriParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.module()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__11:
                self.state = 87
                self.classDeclaration()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__1:
                self.state = 93
                self.declarations()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__6:
                self.state = 99
                self.function()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PopurriParser.T__14) | (1 << PopurriParser.T__15) | (1 << PopurriParser.T__17) | (1 << PopurriParser.T__20) | (1 << PopurriParser.T__21) | (1 << PopurriParser.T__42) | (1 << PopurriParser.T__43) | (1 << PopurriParser.T__44) | (1 << PopurriParser.ID))) != 0):
                self.state = 105
                self.statement()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(PopurriParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def getRuleIndex(self):
            return PopurriParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = PopurriParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(PopurriParser.T__0)
            self.state = 114
            self.match(PopurriParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PopurriParser.DeclarationContext,i)


        def getRuleIndex(self):
            return PopurriParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)




    def declarations(self):

        localctx = PopurriParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PopurriParser.T__1)
            self.state = 117
            self.declaration()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__2:
                self.state = 118
                self.match(PopurriParser.T__2)
                self.state = 119
                self.declaration()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PopurriParser.ID)
            else:
                return self.getToken(PopurriParser.ID, i)

        def assignment(self):
            return self.getTypedRuleContext(PopurriParser.AssignmentContext,0)


        def TYPE(self):
            return self.getToken(PopurriParser.TYPE, 0)

        def CONST_I(self):
            return self.getToken(PopurriParser.CONST_I, 0)

        def getRuleIndex(self):
            return PopurriParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = PopurriParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(PopurriParser.ID)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.T__3:
                self.state = 126
                self.match(PopurriParser.T__3)
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PopurriParser.TYPE]:
                    self.state = 127
                    self.match(PopurriParser.TYPE)
                    pass
                elif token in [PopurriParser.ID]:
                    self.state = 128
                    self.match(PopurriParser.ID)
                    pass
                elif token in [PopurriParser.T__4]:
                    self.state = 129
                    self.match(PopurriParser.T__4)
                    self.state = 130
                    self.match(PopurriParser.TYPE)
                    self.state = 131
                    self.match(PopurriParser.T__5)
                    self.state = 132
                    self.match(PopurriParser.T__4)
                    self.state = 133
                    self.match(PopurriParser.CONST_I)
                    self.state = 134
                    self.match(PopurriParser.T__5)
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PopurriParser.T__36) | (1 << PopurriParser.T__37) | (1 << PopurriParser.T__38) | (1 << PopurriParser.T__39) | (1 << PopurriParser.T__40) | (1 << PopurriParser.T__41))) != 0):
                self.state = 139
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def funcParams(self):
            return self.getTypedRuleContext(PopurriParser.FuncParamsContext,0)


        def TYPE(self):
            return self.getToken(PopurriParser.TYPE, 0)

        def declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.DeclarationsContext)
            else:
                return self.getTypedRuleContext(PopurriParser.DeclarationsContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.StatementContext)
            else:
                return self.getTypedRuleContext(PopurriParser.StatementContext,i)


        def getRuleIndex(self):
            return PopurriParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = PopurriParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(PopurriParser.T__6)
            self.state = 143
            self.match(PopurriParser.ID)
            self.state = 144
            self.match(PopurriParser.T__7)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.TYPE:
                self.state = 145
                self.funcParams()


            self.state = 148
            self.match(PopurriParser.T__8)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.TYPE:
                self.state = 149
                self.match(PopurriParser.TYPE)


            self.state = 152
            self.match(PopurriParser.T__9)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__1:
                self.state = 153
                self.declarations()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PopurriParser.T__14) | (1 << PopurriParser.T__15) | (1 << PopurriParser.T__17) | (1 << PopurriParser.T__20) | (1 << PopurriParser.T__21) | (1 << PopurriParser.T__42) | (1 << PopurriParser.T__43) | (1 << PopurriParser.T__44) | (1 << PopurriParser.ID))) != 0):
                self.state = 159
                self.statement()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(PopurriParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def parent(self):
            return self.getTypedRuleContext(PopurriParser.ParentContext,0)


        def attributes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.AttributesContext)
            else:
                return self.getTypedRuleContext(PopurriParser.AttributesContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.MethodContext)
            else:
                return self.getTypedRuleContext(PopurriParser.MethodContext,i)


        def getRuleIndex(self):
            return PopurriParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = PopurriParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(PopurriParser.T__11)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 168
                self.parent()


            self.state = 171
            self.match(PopurriParser.ID)
            self.state = 172
            self.match(PopurriParser.T__9)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 175
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 173
                    self.attributes()
                    pass

                elif la_ == 2:
                    self.state = 174
                    self.method()
                    pass


                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PopurriParser.T__1) | (1 << PopurriParser.T__6) | (1 << PopurriParser.ACCESS_TYPE))) != 0)):
                    break

            self.state = 179
            self.match(PopurriParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def getRuleIndex(self):
            return PopurriParser.RULE_parent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParent" ):
                listener.enterParent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParent" ):
                listener.exitParent(self)




    def parent(self):

        localctx = PopurriParser.ParentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(PopurriParser.ID)
            self.state = 182
            self.match(PopurriParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.AttributeContext)
            else:
                return self.getTypedRuleContext(PopurriParser.AttributeContext,i)


        def ACCESS_TYPE(self):
            return self.getToken(PopurriParser.ACCESS_TYPE, 0)

        def getRuleIndex(self):
            return PopurriParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = PopurriParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.ACCESS_TYPE:
                self.state = 184
                self.match(PopurriParser.ACCESS_TYPE)


            self.state = 187
            self.match(PopurriParser.T__1)
            self.state = 188
            self.attribute()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__2:
                self.state = 189
                self.match(PopurriParser.T__2)
                self.state = 190
                self.attribute()
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def TYPE(self):
            return self.getToken(PopurriParser.TYPE, 0)

        def CONST_I(self):
            return self.getToken(PopurriParser.CONST_I, 0)

        def getRuleIndex(self):
            return PopurriParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = PopurriParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(PopurriParser.ID)
            self.state = 197
            self.match(PopurriParser.T__3)
            self.state = 205
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PopurriParser.TYPE]:
                self.state = 198
                self.match(PopurriParser.TYPE)
                pass
            elif token in [PopurriParser.T__4]:
                self.state = 199
                self.match(PopurriParser.T__4)
                self.state = 200
                self.match(PopurriParser.TYPE)
                self.state = 201
                self.match(PopurriParser.T__5)
                self.state = 202
                self.match(PopurriParser.T__4)
                self.state = 203
                self.match(PopurriParser.CONST_I)
                self.state = 204
                self.match(PopurriParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PopurriParser.ID, 0)

        def ACCESS_TYPE(self):
            return self.getToken(PopurriParser.ACCESS_TYPE, 0)

        def funcParams(self):
            return self.getTypedRuleContext(PopurriParser.FuncParamsContext,0)


        def TYPE(self):
            return self.getToken(PopurriParser.TYPE, 0)

        def declarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.DeclarationsContext)
            else:
                return self.getTypedRuleContext(PopurriParser.DeclarationsContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PopurriParser.StatementContext)
            else:
                return self.getTypedRuleContext(PopurriParser.StatementContext,i)


        def getRuleIndex(self):
            return PopurriParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = PopurriParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.ACCESS_TYPE:
                self.state = 207
                self.match(PopurriParser.ACCESS_TYPE)


            self.state = 210
            self.match(PopurriParser.T__6)
            self.state = 211
            self.match(PopurriParser.ID)
            self.state = 212
            self.match(PopurriParser.T__7)
            self.state = 214
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.TYPE:
                self.state = 213
                self.funcParams()


            self.state = 216
            self.match(PopurriParser.T__8)
            self.state = 218
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PopurriParser.TYPE:
                self.state = 217
                self.match(PopurriParser.TYPE)


            self.state = 220
            self.match(PopurriParser.T__9)
            self.state = 224
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PopurriParser.T__1:
                self.state = 221
                self.declarations()
                self.state = 226
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 230
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PopurriParser.T__14) | (1 << PopurriParser.T__15) | (1 << PopurriParser.T__17) | (1 << PopurriParser.T__20) | (1 << PopurriParser.T__21) | (1 << PopurriParser.T__42) | (1 << PopurriParser.T__43) | (1 << PopurriParser.T__44) | (1 << PopurriParser.ID))) != 0):
                self.state = 227
                self.statement()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 233
            self.match(PopurriParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PopurriParser.ID)
            else:
                return self.getToken(PopurriParser.ID, i)

        def assignment(self):
            return self.getTypedRuleContext(PopurriParser.AssignmentContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(PopurriParser.WhileLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(PopurriParser.ForLoopContext,0)


        def branch(self):
            return self.getTypedRuleContext(PopurriParser.BranchContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PopurriParser.ReturnStmtContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(PopurriParser.FuncCallContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(PopurriParser.PrintStmtContext,0)


        def printlnStmt(self):
            return self.getTypedRuleContext(PopurriParser.PrintlnStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(PopurriParser.InputStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(PopurriParser.BreakStmtContext,0)


        def COMMENT(self):
            return self.getToken(PopurriParser.COMMENT, 0)

        def indexation(self):
            return self.getTypedRuleContext(PopurriParser.IndexationContext,0)


        def getRuleIndex(self):
            return PopurriParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PopurriParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.state = 237
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                if la_ == 1:
                    self.state = 235
                    self.match(PopurriParser.ID)
                    self.state = 236
                    self.match(PopurriParser.T__13)


                self.state = 239
                self.match(PopurriParser.ID)
                self.state = 241
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PopurriParser.T__4:
                    self.state = 240
                    self.indexation()


                self.state = 243
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 244
                self.whileLoop()
                pass

            elif la_ == 3:
                self.state = 245
                self.forLoop()
                pass
